= v4.1.8
* Template filtering search in post form

= v4.1.7 (15 July, 2025) =
* New - Add Sort Order for subscription
* Enhancement - Update country list and improve state handling
* Fix - Conflict with email log plugin
* Fix - Disable "Update Post Notification" pro features preview
* Fix - CSS on long form lists

= v4.1.6 (30 June, 2025) =
* Enhancement - Form title, description toggle added for post form
* Enhancement - Separate translation context for date range "To"
* Fix - PayPal redirection issues
* Fix - Allowed memory size error on the Post Forms List Page
* Fix - Improved registration page redirects to prevent interference with XML sitemap and XML file requests
* Fix - Dynamic url for {login} and {register} in un-authorized message

= v4.1.5 (2 June, 2025) =
* Enhancement - Added support for unlimited subscriptions.
* Enhancement - Added trial period & next billing dates in subscription.
* Enhancement - Added “Show More” button for subscriptions with many post types.
* Enhancement - Support for PayPal REST API for payments.
* Enhancement - Real-time PayPal Webhook support for payment events.
* Enhancement - Added REST API credentials & test mode to Payment settings.
* Fix - Forms list not loading issue fixed.
* Fix - Fixed issues with null gateways causing errors.
* Fix - Improved handling of duplicate PayPal transactions.
* Fix - Fixed several subscription-related bugs.
* Fix - Fixed tag auto-suggestions not appearing in post forms.

= v4.1.4 (12 May, 2025) =
* Enhance - Post form list page UI and UX
* Fix - Coupon functionality
* Fix - Post submission when name email not required
* Fix - Styling on multiple pages

= v4.1.3 (23 April, 2025) =
* Fix - Draft button does not appear
* Fix - Post submission when name email not required
* Fix - Subscription number not showing
* Fix - Image upload button condition
* Fix - Email body not respecting spaces
* Fix - Show recurring and trial info on subscription
* Fix - Minor css and styling
